Showing currently winning number

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -19,6 +19,8 @@
 
     <button onclick="App.sendNumber()">Send Number</button>
 
+    <h2>Currently winning number:</h2> <p id="currentWinningNumber"></p>
+
     <p id="status"></p>
     <p>
       <strong>Hint:</strong> open the browser developer console to view any
