--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,6 +26,9 @@
       <strong>Hint:</strong> open the browser developer console to view any
       errors and warnings.
     </p>
+
+    <button onclick="App.reset()">Reset</button>
+
     <script src="index.js"></script>
   </body>
 </html>
